2007-11-08  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-selector.h:
	Fix some typos in the GObject macros.

2007-11-06  Michael Monreal  <mmonreal@svn.gnome.org>

	** Fix for bug #492170

	* em-migrate.c:
	* evolution-mail.schemas.in:
	* mail-config.c:
	Replace the old color definitions with very similar colors from
	the Tango color palette.

2007-11-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #343011
	(restore collapse state of selected folder after start)

	* em-folder-tree.c: (emft_maybe_expand_row): Do not expand subtree of
	a node, only make it visible.
	* em-folder-tree-model.h: (em_folder_tree_model_get_expanded_uri),
	(em_folder_tree_model_set_expanded_uri):
	* em-folder-tree-model.c: (em_folder_tree_model_get_expanded_uri),
	(em_folder_tree_model_set_expanded_uri):
	Same as ..._get/_set_expanded, but using 'uri', instead of 'key'.
	* em-folder-tree-model.c: (emftm_uri_to_key): New helper function.
	* mail-component.c: (impl_createView): Restore collapsed state after
	selecting last selected folder, if necessary.

2007-11-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #488298

	* em-folder-view.c: (EMFolderViewEnable emfv_enable_map[]):
	Disable "MessageMarkAsNotJunk" if requested by context.
	* mail-folder-cache.c: (update_1folder): Do not count junked
	messages into "new" messages in drafts and out box.
	* em-popup.c: (em_popup_target_new_select): Disable "MarkAsJunk"
	and "MarnAsNotJunk" in drafts and out box.

2007-11-05  Michael Monreal  <mmonreal@svn.gnome.org>

	** Fix for bug #492102

	* em-folder-view.c: Use mail-mark-read icon.

2007-11-05  Milan Crha  <mcrha@redhat.com>

	* em-folder-view.c: (emfv_message_reply): Leak fix.

2007-11-05  Sankar P  <psankar@novell.com>

	* em-folder-tree.c:
	Change enum order. LAST should be the last.
	Regression from #446035
	
	** Fix for bug #493646

2007-10-31  Priit Laes  <plaes@svn.gnome.org>
	
	* em-format-html-display.c: Fix typo in documentation.
	* em-message-browser.c: Ditto.
